prod/networkPolicies/np-allow-planner-topo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-planner-topo
spec:
  podSelector:
    matchLabels:
      app: topo
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: planner
      ports:
        - protocol: TCP
          port: 8080
