prod/networkPolicies/np-allow-planner-weather.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-planner-weather
spec:
  podSelector:
    matchLabels:
      app: weather
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: planner
      ports:
        - protocol: TCP
          port: 8080
