prod/networkPolicies/np-allow-server-broker.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-server-broker
spec:
  podSelector:
    matchLabels:
      app: broker
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: server
      ports:
        - protocol: TCP
          port: 5672
