prod/networkPolicies/np-allow-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-server-ingress
spec:
  podSelector:
    matchLabels:
      app: server
  ingress:
    - from: []
