prod/networkPolicies/np-allow-server-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-server-mysql
spec:
  podSelector:
    matchLabels:
      app: sqldb
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: server
      ports:
        - protocol: TCP
          port: 3306
